[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Bad_Guys/Boss/BG-105-Boss/BG-105-Main.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bad_Guys/Boss/Boss-105/BG-105-Boss_Jungle_End.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-105-Boss_Jungle_End/BG-105-Boss_Jungle_End_Cannon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-105-Boss_Jungle_End/BG-105-Boss_Jungle_End_Hit_Plate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Map_Parts/MP-52-Door-BG-Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Bad_Guys/BG-25-Turret-Wall-Back.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Top:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Top/Top2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StaticBody2D/CollisionPolygon2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StaticBody2D/CollisionPolygon2D3:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("StaticBody2D/CollisionPolygon2D4:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("StaticBody2D2/CollisionPolygon2D2:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Top:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Top/Top2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StaticBody2D/CollisionPolygon2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StaticBody2D/CollisionPolygon2D3:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("StaticBody2D/CollisionPolygon2D4:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("StaticBody2D2/CollisionPolygon2D2:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Top:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Top/Top2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StaticBody2D/CollisionPolygon2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StaticBody2D/CollisionPolygon2D3:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("StaticBody2D/CollisionPolygon2D4:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("StaticBody2D2/CollisionPolygon2D2:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 205.125 )

[node name="BG-105-Boss_Jungle_End" type="Node2D"]
script = ExtResource( 2 )

[node name="Back" type="Sprite" parent="."]
position = Vector2( 128, -359 )
z_index = -3
texture = ExtResource( 1 )
hframes = 6

[node name="BG-105-Cannon_01" parent="Back" instance=ExtResource( 3 )]
position = Vector2( -65, 9 )

[node name="MP-52-BG-3-Spawner" parent="Back" instance=ExtResource( 5 )]
position = Vector2( 160, 42 )
activation_num = 0
right = false
delayed_start = false

[node name="MP-52-BG-3-Spawner2" parent="Back" instance=ExtResource( 5 )]
position = Vector2( 163, -260 )
activation_num = 0
right = false
delayed_start = false

[node name="Top" type="Sprite" parent="."]
position = Vector2( 128, -359 )
z_index = 1
texture = ExtResource( 1 )
hframes = 6
frame = 2

[node name="Top2" type="Sprite" parent="Top"]
position = Vector2( 256, 0 )
z_index = 1
texture = ExtResource( 1 )
hframes = 6
frame = 3

[node name="Hit_Plate" parent="Top" instance=ExtResource( 4 )]
position = Vector2( -46, 264 )

[node name="BG-105-Cannon_02" parent="Top" instance=ExtResource( 3 )]
position = Vector2( 62, 9 )

[node name="BG-25-Turret-Wall-Back" parent="Top" instance=ExtResource( 6 )]
position = Vector2( 99, 136 )
z_index = 1
activation_num = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = 1
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 32, -317 )
z_index = 1
polygon = PoolVector2Array( 0, 0, -32, 30, 480, 30, 480, 0 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 75, -39 )
z_index = 1
polygon = PoolVector2Array( 4, -248, 4, 44, 437, 45, 437, -248 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
position = Vector2( 32, -317 )
z_index = 1
polygon = PoolVector2Array( -32, 30, 46.6309, 125.222, 140, 70, 442, 66, 447, 290, 46, 288, -32, 317, 480, 323, 480, 30 )
disabled = true

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 72, -619 )
z_index = 1
polygon = PoolVector2Array( 0, 0, 0, 45, 440, 45, 440, 0 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
visible = false
z_index = 1
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2( 32, -317 )
polygon = PoolVector2Array( -32, 30, -32, 317, 46, 319, 46, 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Start = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 341, -504 )
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
